# tombstack-native

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  THIRD_PARTY.md
.github/workflows/: ci.yml
docs/: INTEGRATION.md  WIRE-PROTOCOL.md
examples/: crash_sidecar_demo.c  minimal.c
include/tombstone/: tombstone.h
src/: batch.cpp  batch.h  breadcrumb_ring.cpp  breadcrumb_ring.h  client.cpp  client.h  client_reports.cpp  clock.cpp  clock.h  dedupe.cpp  dedupe.h  device_identity.cpp  device_identity.h  frame_stats.cpp  frame_stats.h  json_scan.cpp  json_scan.h  json_writer.cpp  json_writer.h  native_crash.cpp  native_crash.h  payloads.cpp  payloads.h  platform.cpp  platform.h  preinit.cpp  preinit.h  retry_after.cpp  retry_after.h  sampler.cpp  sampler.h  sdk_log.cpp  sdk_log.h  session_log.cpp  session_log.h  session_marker.cpp  session_marker.h  sidecar_queue.cpp  sidecar_queue.h  signature.cpp  (+7 more)
tests/: main.cpp  test_batch.cpp  test_breadcrumb_ring.cpp  test_clock.cpp  test_concurrency.cpp  test_dedupe.cpp  test_device_identity.cpp  test_frame_stats.cpp  test_framework.h  test_json_scan.cpp  test_json_writer.cpp  test_native_crash.cpp  test_payloads.cpp  test_preinit.cpp  test_retry_after.cpp  test_sampler.cpp  test_session_log.cpp  test_session_marker.cpp  test_sidecar.cpp  test_signature.cpp  test_start_gate.cpp
